--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
@@ -10,6 +10,28 @@
 
 
 <body>
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+    <div class="item">0</div>
+  </div>
+
+  <style>
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3,100px);
+      grid-template-rows: repeat(5, 100px);
+      grid-gap: 5px;
+    }
+  </style>
+
 
 </body>
 
