--- a/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
+++ b/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
@@ -10,7 +10,8 @@
 
 <body>
   <div class="container">
-    <div class="item">1</div>
+    <div class="item"> MS is cool
+    </div>
     <div class="item">2</div>
     <div class="item">3</div>
     <div class="item">4</div>
@@ -30,7 +31,11 @@
   <style>
     .container {
       display: grid;
+      height: 800px;
       grid-gap: 20px;
+      border: 10px solid var(--yellow);
+      grid-template-columns: auto 1fr auto 1fr;
+      /*grid-template-rows: 1fr 5fr 1fr 1fr;*/
     }
   </style>
 </body>
